--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     build:
       context: ./server
       dockerfile: Dockerfile
+    ports:
+      - '8000:8000'
     restart: unless-stopped
     volumes:
       - '/app/node_modules'
