--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -51,6 +51,8 @@ http {
             set $x_request_uri $1;
 
             proxy_pass http://ps_server:8000/cache$x_request_uri;
+
+            add_header "X-Cache-Status" $upstream_cache_status;
         }
     }
 }
