--- a/nginx-html/nginx.conf
+++ b/nginx-html/nginx.conf
@@ -15,33 +15,20 @@ http {
     '"$http_user_agent" "$http_x_forwarded_for"';
     access_log logs/access.log main;
 
+    gzip on;
     sendfile on;
     tcp_nopush on;
 
-    proxy_cache_path /var/cache/nginx levels=1:2 use_temp_path=off keys_zone=cache_content:10m;
-
     server {
-        listen 7000;
+        listen 7001;
 
         location / {
-            resolver 127.0.0.11;
-
-            proxy_cache cache_content;
-            proxy_cache_key $host$uri$is_args$args;
-
-            proxy_cache_valid 200 35s;
-            proxy_cache_valid 303 307 25s;
-            proxy_cache_valid 400 401 403 406 415 15s;
-            proxy_cache_valid 404 5s;
-
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-Host 'Proxy-Server_ps_nginx';
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Real-IP $remote_addr;
 
             proxy_pass http://ps_server_html:8001;
-
-            add_header "X-Cache-Status" $upstream_cache_status;
         }
     }
 }
