Mod: replace header Server

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,9 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
 
             proxy_pass http://ps_server:8000/;
+
+            more_clear_headers "Server";
+            add_header "Server" "Nginx 7000";
         }
 
         location ~ ^/cache(.*)$ {
@@ -52,7 +55,9 @@ http {
 
             proxy_pass http://ps_server:8000/cache$x_request_uri;
 
+            more_clear_headers "Server";
             add_header "X-Cache-Status" $upstream_cache_status;
+            add_header "Server" "Nginx 7000";
         }
     }
 }
