Mod: replace res header Server

--- a/nginx-html/nginx.conf
+++ b/nginx-html/nginx.conf
@@ -29,6 +29,9 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
 
             proxy_pass http://ps_server_html:8001;
+
+            more_clear_headers "Server";
+            add_header "Server" "Nginx-HTML 7001";
         }
     }
 }
