--- a/nginx-image/nginx.conf
+++ b/nginx-image/nginx.conf
@@ -29,6 +29,9 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
 
             proxy_pass http://ps_server_image:8002;
+
+            more_clear_headers "Server";
+            add_header "Server" "Nginx-Image 7002";
         }
     }
 }
