--- a/client/.env.production
+++ b/client/.env.production
@@ -3,4 +3,4 @@
 # Use REACT_APP_ prefix to public env variable to browser
 
 REACT_APP_NAME="reactjs-template-production"
-REACT_APP_API="https://61efb39e732d93001778e530.mockapi.io"
+REACT_APP_API=http://localhost:8000
