--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,6 +124,26 @@ services:
     networks:
       - ps_network
 
+  ps_mysql:
+    image: ps_mysql
+    container_name: ps_mysql
+    build:
+      context: ./mysql
+      args:
+        - MYSQL_DATABASE=quizz
+        - MYSQL_USER=quizz
+        - MYSQL_PASSWORD=quizz
+        - MYSQL_ROOT_PASSWORD=quizz
+    volumes:
+      - mysql:/var/lib/mysql
+    ports:
+      - '3306:3306'
+    networks:
+      - ps_network
+
+volumes:
+  mysql:
+
 networks:
   ps_network:
     driver: bridge
