--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
     "uuidv4": "^6.2.5"
   }
 }
