--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.25.0",
     "env-cmd": "^10.1.0",
+    "eslint-plugin-json": "^3.1.0",
     "i18next": "^22.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,7 +24,23 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "@babel/core": "^7.16.12",
+    "@types/jest": "^27.4.0",
+    "@types/loadable__component": "^5.13.4",
+    "@types/styled-components": "^5.1.21",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "babel-loader": "^8.2.3",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.5.6",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3",
+    "webpack": "5"
   },
   "scripts": {
     "dev": "env-cmd -f .env.development react-scripts start",
@@ -65,36 +82,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@storybook/addon-actions": "^6.4.14",
-    "@storybook/addon-essentials": "^6.4.14",
-    "@storybook/addon-links": "^6.4.14",
-    "@storybook/builder-webpack5": "^6.4.14",
-    "@storybook/manager-webpack5": "^6.4.14",
-    "@storybook/node-logger": "^6.4.14",
-    "@storybook/preset-create-react-app": "^4.0.0",
-    "@storybook/react": "^6.4.14",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/loadable__component": "^5.13.4",
-    "@types/styled-components": "^5.1.21",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "babel-loader": "^8.2.3",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.5.6",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.5.1",
-    "pretty-quick": "^3.1.3",
-    "webpack": "5"
   },
   "lint-staged": {
     "*.ts*": "eslint --fix --max-warnings 0",
