--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "i18next": "^22.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.38.0",
     "react-i18next": "^12.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
