--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -2,6 +2,6 @@ FROM mysql
 
 ENV MYSQL_ROOT_PASSWORD quizz
 
-ADD init.sql /docker-entrypoint-initdb.d
+ADD init_database.sql /docker-entrypoint-initdb.d
 
 EXPOSE 3306
