--- a/client/package.json
+++ b/client/package.json
@@ -8,24 +8,21 @@
     "@loadable/component": "^5.15.2",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
-    "@reduxjs/toolkit": "^1.7.1",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.25.0",
-    "env-cmd": "^10.1.0",
-    "eslint-plugin-json": "^3.1.0",
-    "i18next": "^22.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.38.0",
-    "react-i18next": "^12.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
-    "typescript": "^4.4.2",
+    "typescript": "^4.4.2"
+  },
+  "devDependencies": {
     "@babel/core": "^7.16.12",
     "@types/jest": "^27.4.0",
     "@types/loadable__component": "^5.13.4",
@@ -33,14 +30,17 @@
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "babel-loader": "^8.2.3",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.5.6",
+    "i18next": "^21.6.7",
     "lint-staged": "^13.0.3",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
+    "react-i18next": "^11.15.3",
     "webpack": "5"
   },
   "scripts": {
@@ -52,8 +52,6 @@
     "build:production": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "format": "npx pretty-quick --staged && npx lint-staged"
   },
   "eslintConfig": {
