--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,16 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "dev": "env-cmd -f .env.development nodemon server.js",
+    "start": "env-cmd -f .env.production node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.3",
-    "uuidv4": "^6.2.5"
+    "mysql2": "^2.3.3"
   }
 }
