--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactjs-template",
+  "name": "quizz-client-reactjs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,41 +7,21 @@
     "@emotion/styled": "^11.10.4",
     "@loadable/component": "^5.15.2",
     "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.10",
+    "@mui/material": "^5.10.11",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.3",
-    "axios": "^0.25.0",
+    "axios": "^1.1.3",
+    "i18next": "^22.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.38.0",
-    "react-redux": "^7.2.6",
+    "react-i18next": "^12.0.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@types/jest": "^27.4.0",
-    "@types/loadable__component": "^5.13.4",
-    "@types/styled-components": "^5.1.21",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "babel-loader": "^8.2.3",
-    "env-cmd": "^10.1.0",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "i18next": "^21.6.7",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.5.1",
-    "pretty-quick": "^3.1.3",
-    "react-i18next": "^11.15.3",
-    "webpack": "5"
   },
   "scripts": {
     "dev": "env-cmd -f .env.development react-scripts start",
@@ -51,23 +31,12 @@
     "build:staging": "env-cmd -f .env.staging react-scripts build",
     "build:production": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "format": "npx pretty-quick --staged && npx lint-staged"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
     ]
   },
   "browserslist": {
@@ -88,5 +57,23 @@
   },
   "overrides": {
     "react-refresh": "0.11.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@types/loadable__component": "^5.13.4",
+    "@types/styled-components": "^5.1.21",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "babel-loader": "^8.2.3",
+    "env-cmd": "^10.1.0",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3",
+    "webpack": "5"
   }
 }
