update all apps

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,16 +6,14 @@ WORKDIR /app
 # Copy app files
 COPY . .
 
-# Install dependencies (npm ci makes sure the exact versions in the lockfile gets installed)
-RUN npm ci
+# Install dependencies
+RUN yarn
 
 # Build the app
-RUN npm run build:production
+RUN yarn run build:production
 
 # Bundle static assets with nginx
 FROM nginx:alpine as production
-
-ENV NODE_ENV production
 
 # Copy built assets from `builder` image
 COPY --from=builder /app/build /usr/share/nginx/html
