--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.3"
   }
 }
