--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.3"
