--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.4",
     "@loadable/component": "^5.15.2",
     "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.106",
     "@mui/material": "^5.10.11",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
