Feature: update server api with sequelize and using refresh flow for api

--- a/client/.env.staging
+++ b/client/.env.staging
@@ -3,4 +3,4 @@
 # Use REACT_APP_ prefix to public env variable to browser
 
 REACT_APP_NAME="reactjs-template-staging"
-REACT_APP_API=http://localhost:8000
+REACT_APP_API=http://localhost:8000/api/v1
