--- a/client/.env.development
+++ b/client/.env.development
@@ -3,4 +3,4 @@
 # Use REACT_APP_ prefix to public env variable to browser
 
 REACT_APP_NAME="reactjs-template-development"
-REACT_APP_API=http://54.255.234.211:8000
+REACT_APP_API=http://54.255.234.211:8000/api/v1
