--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "env": {
-    "browser": true,
+    "browser": false,
+    "node": true,
     "commonjs": true,
     "es2021": true
   },
@@ -11,7 +12,6 @@
   },
   "rules": {
     "indent": ["error", 2],
-    "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
     "semi": ["error", "always"]
   }
