--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -37,7 +37,6 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "error",
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": ["warn"],
-    "no-console": "warn"
+    "@typescript-eslint/no-unused-vars": ["warn"]
   }
 }
