--- a/server/.env.development
+++ b/server/.env.development
@@ -6,4 +6,4 @@ DATABASE_DB=quizz
 DATABASE_URI=mongodb://localhost/demodatabase
 PORT=8000
 ACCESS_TOKEN_SECRET=Access_Token_Secret_#$%_ExpressJS_Authentication
-ACCESS_TOKEN_LIFE=5m
+ACCESS_TOKEN_LIFE=1h
